// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pagination.utils should apply filter correctly on count and items 1`] = `
Object {
  "currentPage": 1,
  "firstPage": "localhost/dummy?page=1&per_page=30",
  "hasNext": false,
  "hasPrev": false,
  "lastPage": "localhost/dummy?page=1&per_page=30",
  "nextPage": "localhost/dummy?page=2&per_page=30",
  "perPage": 30,
  "prevPage": "localhost/dummy?page=0&per_page=30",
  "total": 25,
}
`;

exports[`pagination.utils should fetch page with correct info 1`] = `
Object {
  "currentPage": 1,
  "firstPage": "localhost/dummy?page=1&per_page=30",
  "hasNext": true,
  "hasPrev": false,
  "lastPage": "localhost/dummy?page=4&per_page=30",
  "nextPage": "localhost/dummy?page=2&per_page=30",
  "perPage": 30,
  "prevPage": "localhost/dummy?page=0&per_page=30",
  "total": 100,
}
`;
